# what-changed-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.kiro/specs/whatchanged-mcp/: .config.kiro  design.md  requirements.md  tasks.md
src/whatchanged_mcp/: __init__.py  config.py  errors.py
